tests/baselines/reference/errorsOnImportedSymbol.errors.txt
tests/cases/compiler/errorsOnImportedSymbol_1.ts(2,13): error TS2304: Cannot find name 'Sammy'.
tests/cases/compiler/errorsOnImportedSymbol_1.ts(3,9): error TS2304: Cannot find name 'Sammy'.


==== tests/cases/compiler/errorsOnImportedSymbol_1.ts (2 errors) ====
    import Sammy = require("./errorsOnImportedSymbol_0");
    var x = new Sammy.Sammy();
                ~~~~~
!!! error TS2304: Cannot find name 'Sammy'.
    var y = Sammy.Sammy(); 
            ~~~~~
!!! error TS2304: Cannot find name 'Sammy'.
    
    
==== tests/cases/compiler/errorsOnImportedSymbol_0.ts (0 errors) ====
    
    interface Sammy {
        new (): any;
        (): number;
    }
    export = Sammy;
    